--- a/spring_boot_app/src/main/resources/application.yml
+++ b/spring_boot_app/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: ${DB_URL}
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
+    url: ${AZURE_DB_URL}
+    username: ${AZURE_DB_USER}
+    password: ${AZURE_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
