--- a/.github/workflows/lab_code_party-animators.yml
+++ b/.github/workflows/lab_code_party-animators.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+        working-directory: /spring-boot-app
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
