--- a/spring_boot_app/src/main/resources/application.yml
+++ b/spring_boot_app/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     url: ${AZURE_DB_URL}
     username: ${AZURE_DB_USER}
     password: ${AZURE_DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
 
   jpa:
     # Showing log for each sql query
