--- a/spring_boot_app/src/main/resources/application.yml
+++ b/spring_boot_app/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
+    driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
     url: ${AZURE_DB_URL}
     username: ${AZURE_DB_USER}
     password: ${AZURE_DB_PASSWORD}
-    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
 
   jpa:
     # Showing log for each sql query
