--- a/spring_boot_app/src/main/resources/application.yml
+++ b/spring_boot_app/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${AZURE_DB_URL}
     username: ${AZURE_DB_USER}
     password: ${AZURE_DB_PASSWORD}
