--- a/.github/workflows/lab_code_best-party-animators.yml
+++ b/.github/workflows/lab_code_best-party-animators.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+        working-directory: spring_boot_app
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
