--- a/.github/workflows/lab_code_best-party-animators.yml
+++ b/.github/workflows/lab_code_best-party-animators.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/spring_boot_app/target/*.war'
 
   deploy:
     runs-on: ubuntu-latest
