--- a/.github/workflows/lab_code_best-party-animators.yml
+++ b/.github/workflows/lab_code_best-party-animators.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy WAR app to Azure Web App - best-party-animators
+name: Build and deploy JAR app to Azure Web App - best-party-animators
 
 on:
   push:
@@ -34,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/spring_boot_app/target/*.war'
+          path: '${{ github.workspace }}/spring_boot_app/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
